Fix glitch with messages trying to do stuff to an empty array.

--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -29,8 +29,6 @@ $break-large: 850px;
     .message-info .time {
       display: block;
     }
-
-
   }
 
   li {
@@ -58,6 +56,7 @@ $break-large: 850px;
 
   .time {
     display: inline-block;
+    vertical-align: top;
     width: 80px;
   }
 
