--- a/app/views/mobile_dashboard/_income.html.erb
+++ b/app/views/mobile_dashboard/_income.html.erb
@@ -1,5 +1,5 @@
 <h4><span>Country</span> Income</h4>
-<p class="description">This is the income that you'll have able to spend in Round {{round + 1}}.</p>
+<p class="description">This is the income that you'll have available to spend in Round {{round + 1}}.</p>
 <div class="income-info">
   <div class="half">
     Credits: {{incomeValue}}<br>
