Add 10 minute comment for messages

--- a/app/views/messages/_new_message.html.erb
+++ b/app/views/messages/_new_message.html.erb
@@ -21,3 +21,4 @@
     <div class="button" ng-click="sendMessage(message)">Send Message</div>
   </div>
 </form>
+Messages are sent out every 10 minutes.
