--- a/app/views/games/human_control.html.erb
+++ b/app/views/games/human_control.html.erb
@@ -7,33 +7,7 @@
   </h3>
 
   <section class="clearfix">
-    <div class="half-width">
-      <p>
-        <em>
-          PR effects collected on turn <%= @current_round %> will be distributed to teams halfway
-          through turn <%= @current_round + 1 %> along with credits.  These credits will then be usable in turn <%= @current_round + 2%>.
-        </em>
-      </p>
-      <table class="unpr">
-        <thead>
-          <tr>
-            <th >Country</th>
-            <th >PR Change</th>
-            <th >Details</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @pr_amounts.each do |data, value| %>
-            <tr>
-              <td><%= data %></td>
-              <td><%= value %></td>
-              <td><%= link_to "Details", country_pr_status_path(data), :class => "button-input" %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-    <div class="half-width">
+    <div>
       <%= render 'layouts/country_pr_menu' %>
       <table class="unpr">
         <tr>
@@ -110,7 +84,32 @@
       <%= form.submit "Save new PR" %>
 
     <% end %>
-
+    <div>
+      <p>
+        <em>
+          PR effects collected on turn <%= @current_round %> will be distributed to teams halfway
+          through turn <%= @current_round + 1 %> along with credits.  These credits will then be usable in turn <%= @current_round + 2%>.
+        </em>
+      </p>
+      <table class="unpr">
+        <thead>
+          <tr>
+            <th >Country</th>
+            <th >PR Change</th>
+            <th >Details</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @pr_amounts.each do |data, value| %>
+            <tr>
+              <td><%= data %></td>
+              <td><%= value %></td>
+              <td><%= link_to "Details", country_pr_status_path(data), :class => "button-input" %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
     <br />
     <%= link_to 'New PR Entry', new_public_relation_path, :class => 'button-input' %>
   </section>
