--- a/app/views/mobile_dashboard/_header.html.erb
+++ b/app/views/mobile_dashboard/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="my-country">
-  <img ng-src="assets/flags/{{myCountryName}}.png" />
+  <img ng-src="assets/flags/{{myCountryName}}.png" class="flag-left" />
   <div class="govt">
     <h5>{{myCountryName}}</h5>
     <h4>{{myRoleName}}</h4>
