--- a/app/assets/stylesheets/mobile_dashboard.css.scss
+++ b/app/assets/stylesheets/mobile_dashboard.css.scss
@@ -1,5 +1,8 @@
+$break-mini: 400px;
+$break-half: 550px;
 $break-small: 600px;
 $break-med: 600px;
+$break-md: 800px;
 $break-large: 1200px;
 
 @mixin role-colors($color, $background) {
@@ -13,6 +16,7 @@ $break-large: 1200px;
   .messages-sidebar li.active { border-left: 6px solid $color; }
   .govt h4 { color: $color; }
   h4 span { color: $color; }
+  .sidebar .menu li.focused { background: $color; }
 }
 
 .role-head        { @include role-colors(#0C7C33, "green");  }
@@ -98,7 +102,7 @@ body.mobile {
     color: #000;
     margin: 10px 0;
 
-    @media (max-width: $break-med) {
+    @media (max-width: $break-md) {
       margin: 5px 0;
     }
   }
@@ -109,16 +113,18 @@ body.mobile {
   .country-header {
     background: #FFF;
     margin: 0;
-    padding-bottom: 10px;
     margin-bottom: 50px;
+    padding-bottom: 10px;
   }
 
   .country-items {
     display: flex;
+    margin-left: 60px;
     text-align: center;
 
-    @media (max-width: $break-med) {
+    @media (max-width: $break-md) {
       display: block;
+      margin-left: 0px;
     }
   }
 
@@ -126,18 +132,20 @@ body.mobile {
     padding: 0 10px;
   }
 
-  a.logoff {
-    border-radius: 2px;
-    color: #FFF;
-    margin: 0;
-    padding: 2px 5px;
-  }
-
   .my-country {
     min-width: 375px;
 
-    @media (max-width: $break-med) {
+    @media (max-width: $break-md) {
+      margin-left: 60px;
+      margin-right: 60px;
+      min-width: auto;
       text-align: center;
+    }
+
+    @media (max-width: $break-half) {
+      margin-right: 10px;
+
+      .flag-left { display: none; }
     }
 
     .govt {
@@ -166,7 +174,7 @@ body.mobile {
     flex: 1;
     text-align: center;
 
-    @media (max-width: $break-med) {
+    @media (max-width: $break-md) {
       h4 {
         font-size: 16px;
       }
@@ -187,27 +195,7 @@ body.mobile {
   ===================================== */
   .tabs {
     margin: 0 auto;
-    width: 80%;
-  }
-
-  .tab-selection {
-    display: flex;
-  }
-
-  .tab-choice {
-    color: #FFF;
-    cursor: pointer;
-    display: inline-block;
-    line-height: 16px;
-    margin-left: 10px;
-    padding: 5px 8px;
-
-    &.focused {
-      background: #FFF;
-      border-bottom: 1px solid #FFF;
-      color: #000;
-      margin-bottom: -1px;
-    }
+    width: 90%;
   }
 
   .tab {
@@ -344,48 +332,118 @@ body.mobile {
 }
 
 /* =====================================
-            MOBILE - PORTRAIT
+            HAMBURGER MENU
 ===================================== */
-@media only screen and (orientation: portrait) {
-  .mobile_dashboard {
-    .tab-choice {
-      font-size: 14px;
-      height: 25px;
-      line-height: 18px;
-      margin-left: 0;
-      margin-right: 5px;
-      padding: 5px 5px 5px 5px;
-    }
 
-    .tab-choice.focused {
-      border-bottom: 0px;
-      position: relative;
-    }
+.mobile_dashboard {
+  display: flex;
 
-    .tab-choice.focused:after {
-      content: " ";
-      display: block;
-      height: 1px;
-      bottom: -2px;
-      border-top: 2px solid #FFF;
-      position: absolute;
-      width: 100%;
-      left: 0px;
-    }
+   .page-content {
+    color: #444;
+    flex: 1;
+    padding: 0;
+    transition: all .3s;
+    width: calc(100% - 150px);
 
-    .tab {
-      padding: 10px;
-    }
-
-    .tab.news .news-item {
-      margin: 5px;
+    &.sidebar-open {
+      margin-right: -150px;
     }
   }
 }
 
-/* =====================================
-            MOBILE - LANDSCAPE
-===================================== */
-@media only screen and (orientation: landscape) {
+.sidebar {
+  background: #444;
+  color: #eee;
+  height: 100%;
+  font-size: 1.6rem;
+  line-height: 2.2rem;
+  margin-left: -150px;
+  overflow: hidden;
+  padding-top: 6.5rem;
+  transition: all .3s;
+  width: 150px;
 
+  a {
+    color: #EEE;
+  }
+
+  a:hover {
+    background-color: transparent;
+    color: #EEE;
+  }
+
+  .menu {
+    list-style: none;
+    padding: 0;
+
+    li {
+      border-top: 1px solid darken(#444, 10%);
+      cursor: pointer;
+      padding: 16px;
+
+      &:last-child {
+        border-bottom: 1px solid darken(#444, 10%);
+      }
+    }
+  }
+
+  &.sidebar-open {
+    height: 100%;
+    margin-left: 0px;
+    transition: all 500ms ease-in-out;
+    width: 150px;
+  }
+}
+
+
+.hamburger-label {
+  color: white;
+  cursor: pointer;
+  height: 30px;
+  left: 16px;
+  margin: 0;
+  position: absolute;
+  top: 24px;
+  width: 40px;
+
+  span,
+  span:before,
+  span:after {
+    background: #444;
+    border-radius: 1px;
+    content: '';
+    cursor: pointer;
+    display: block;
+    height: 5px;
+    position: absolute;
+    top: 10px;
+    transition: all 500ms ease-in-out;
+    width: 35px;
+  }
+
+  span:before {
+    top: -10px;
+  }
+
+  span:after {
+    bottom: -10px;
+  }
+
+  &.sidebar-open {
+    span {
+      background-color: transparent;
+    }
+
+    span:before {
+      background-color: #fff;
+      top: 0;
+      transform: rotate(45deg);
+    }
+
+    span:after {
+      background-color: #fff;
+      top: 0;
+      transform: rotate(-45deg);
+    }
+  }
 }
