--- a/app/views/games/human_control.html.erb
+++ b/app/views/games/human_control.html.erb
@@ -9,6 +9,8 @@
   <section class="clearfix">
     <div>
       <%= render 'layouts/country_pr_menu' %>
+      <p> Credits in the below table are distributed in Round <%= @current_round %> 
+        for spending in Round <%= @current_round + 1 %>.</p>
       <table class="unpr">
         <tr>
           <th>Country</th>
