--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -19,7 +19,7 @@
         </div>
       <% end %>
     <% else %>
-      <h2>Welcome back, <%= current_user.email %>!</h2>
+      <h2>Welcome <%= current_user.email %>!</h2>
       <div class="welcome">Now that you've signed in you can go to the <%= link_to 'Dashboard', dashboard_path , method: :get %>
       <% if current_user.admin? %> and <%= link_to 'Administration', admin_control_path, method: :get %>,<% end %> or <%= link_to 'Logout', destroy_user_session_path, :method => :delete %>
       </div>
