--- a/app/views/public_relations/un_dashboard.html.erb
+++ b/app/views/public_relations/un_dashboard.html.erb
@@ -1,7 +1,7 @@
 <div id="admin">
   <h1>United Nations Controls</h1>
 
-  <h3>Bulk UN PR Ceation</h3>
+  <h3>Bulk UN PR Creation</h3>
   <section>
     <%= form_for :un_public_relations do |form| %>
       <%= form.label :round_label, "Round: " %>
