--- a/app/views/layouts/_footer_navbar.html.erb
+++ b/app/views/layouts/_footer_navbar.html.erb
@@ -9,7 +9,7 @@
     <li><%= link_to 'News', news_messages_path %></li>
     <li><%= link_to 'Messages', messages_path %></li>
     <li><%= link_to 'Administration', admin_control_path %></li>
-    <% if current_user && current_user.super_admin? %>
+    <% if current_user && current_user.admin? %>
       <li><%= link_to 'Users', users_path %></li>
       <li><%= link_to 'Teams', teams_path %></li>
     <% end %>
