--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -26,16 +26,17 @@
       <%= f.hidden_field :role, :value => @user.role %>
 
       <%= f.label :team %> </br>
-        <%= f.select :team, options_for_select(@teams.collect{ |team| [team.team_name, team.id]}) %></br><br />
+      <%= f.select :team, options_for_select(@teams.collect{ |team| [team.team_name, team.id]}) %></br></br>
 
       <%= f.label :team_role %> </br>
-        <%= f.select :team_role, options_for_select(@team_roles.collect{ |role| [role.role_display_name, role.id]}) %></br><br />
+      <%= f.select :team_role, options_for_select(@team_roles.collect{ |role| [role.role_display_name, role.id]}) %></br></br>
 
-      <% if @super_admin? %>
+      <% if @super_admin %>
         <%= f.label :game %> </br>
-         <%= f.select :game, options_for_select(@games.collect{ |game| [game.name, game.id]}) %></br><br />
-        <%= f.submit %>
+        <%= f.select :game, options_for_select(@games.collect{ |game| [game.name, game.id]}) %></br></br>
       <% end %>
+
+      <%= f.submit %></br></br>
     </div>
   <% end %>
 </div>
