--- a/app/views/bonus_reserves/index.html.erb
+++ b/app/views/bonus_reserves/index.html.erb
@@ -11,7 +11,7 @@
     </tr>
   </thead>
   <tbody>
-    <% @bonus_credits.each do |bc| %>
+    <% @bonus_reserves.each do |bc| %>
       <tr>
         <td><%= bc.team.team_name %></td>
         <td><%= bc.round %></td>
