--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -31,11 +31,12 @@
       <%= f.label :team_role %> </br>
         <%= f.select :team_role, options_for_select(@team_roles.collect{ |role| [role.role_display_name, role.id]}) %></br><br />
 
-      <% if @super_admin? %>
-        <%= f.label :game %> </br>
-         <%= f.select :game, options_for_select(@games.collect{ |game| [game.name, game.id]}) %></br><br />
-        <%= f.submit %>
+      <% if @super_admin %>
+         <%= f.label :game %> </br>
+         <%= f.select :game, options_for_select(@games.collect{ |game| [game.name, game.id]}) %></br>
       <% end %>
+      <%= f.submit %>
+    </br>
     </div>
   <% end %>
 </div>
