--- a/app/views/layouts/_footer_navbar.html.erb
+++ b/app/views/layouts/_footer_navbar.html.erb
@@ -11,7 +11,9 @@
     <li><%= link_to 'Administration', admin_control_path %></li>
     <% if current_user && current_user.admin? %>
       <li><%= link_to 'Users', users_path %></li>
+      <% if current_user && current_user.super_admin? %>
       <li><%= link_to 'Teams', teams_path %></li>
+      <% end %>
     <% end %>
     <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
   </ul>
